🔖 Bump `bleeding-corners-fix` to 1.0.3

--- a/themes/7d577b21-4685-4db2-bb17-d39d08eec199/chrome.css
+++ b/themes/7d577b21-4685-4db2-bb17-d39d08eec199/chrome.css
@@ -1,4 +1,3 @@
-
-.browserContainer {
-    clip-path: inset(0 round var(--zen-native-inner-radius));
+.browserContainer, .browserStack {
+	clip-path: inset(0 round var(--zen-native-inner-radius));
 }
